[package]
name = "just_another_todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
axum = "0.7.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde = { version = "1.0.214", features = ["derive"] }
